gccida/c2/calculate_dominance_info
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1052:59: error: must use 'enum' tag to refer to type 'cdi_direction'
void  calculate_dominance_info( int *idom, sbitmap *doms, cdi_direction reverse) 
                                                          ^
                                                          enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1100:1: error: must use 'enum' tag to refer to type 'cdi_direction'
cdi_direction v50; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1193:44: error: use of undeclared identifier 'xmm'
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x666470); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1195:42: error: use of undeclared identifier 'xmm'
v10 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x666480); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1196:42: error: use of undeclared identifier 'xmm'
v11 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x666490); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1197:42: error: use of undeclared identifier 'xmm'
v12 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x6664A0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1198:42: error: use of undeclared identifier 'xmm'
v13 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x6664B0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1199:42: error: use of undeclared identifier 'xmm'
v14 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x6664C0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1200:42: error: use of undeclared identifier 'xmm'
v15 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x6664D0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1201:42: error: use of undeclared identifier 'xmm'
v16 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x6664E0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1202:42: error: use of undeclared identifier 'xmm'
v17 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x6664F0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1221:44: error: use of undeclared identifier 'xmm'
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x666470); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1228:42: error: use of undeclared identifier 'xmm'
v20 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x666480); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1229:42: error: use of undeclared identifier 'xmm'
v21 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x666490); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1256:42: error: use of undeclared identifier 'xmm'
v24 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x666470); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1258:42: error: use of undeclared identifier 'xmm'
v27 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x666480); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1259:42: error: use of undeclared identifier 'xmm'
v28 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x666490); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1260:42: error: use of undeclared identifier 'xmm'
v29 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x6664A0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/dominance.c:1261:42: error: use of undeclared identifier 'xmm'
v30 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x6664B0); 
                                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/calculate_dominance_info/src/obj/dominance.o] Error 1
